Initial commit - Add nearest neighbor heuristic script

--- a/nearest_neighbor_heuristic.ipynb
+++ b/nearest_neighbor_heuristic.ipynb
@@ -5,7 +5,7 @@
    "id": "94858a08",
    "metadata": {},
    "source": [
-    "# The Travelling Salesman Problem\n",
+    "# Nearest Neighbor Heuristic\n",
     "\n",
     "**Authors**: Ben Morris, Daniel Park, Jess Brown, Han Vakil"
    ]
@@ -39,10 +39,14 @@
     "curr_city = start_city\n",
     "all_cities_visited = False\n",
     "\n",
+    "\"\"\"\n",
+    "Docstring placeholder\n",
+    "\"\"\"\n",
+    "\n",
     "def tsp_nearest_neighbor():\n",
     "    solution_path.append(start_city)\n",
     "    while all_cities_visited == False:\n",
-    "    # Find nearest unvisited city and make that current city - add to solution path \n",
+    "        # Find nearest unvisited city and make that current city - add to solution path \n",
     "        nearest = find_nearest_city(curr_city)\n",
     "        solution_path.append(nearest)\n",
     "        curr_city = nearest\n",
@@ -55,7 +59,12 @@
     "            all_cities_visited = True\n",
     "    # Return to the start city once you have visited every city  \n",
     "    solution_path = solution_path.append(start_city)\n",
+    "    # Return path\n",
     "    return solution_path\n",
+    "\n",
+    "\"\"\"\n",
+    "Docstring placeholder\n",
+    "\"\"\"\n",
     "\n",
     "def find_nearest_city(curr_city_index): \n",
     "    min_weight = 1000000\n",
