--- a/nearest_neighbor_heuristic.ipynb
+++ b/nearest_neighbor_heuristic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "6844ae64",
    "metadata": {},
    "outputs": [],
@@ -21,60 +21,122 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
-    "import random"
+    "import random\n",
+    "from utils import random_graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "78e7feb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices = []\n",
-    "graph = []\n",
-    "solution_path = []\n",
-    "# Select a random city from graph - make that start city / first current city \n",
-    "start_city = random.choice(graph)\n",
-    "curr_city = start_city\n",
-    "all_cities_visited = False\n",
-    "\n",
     "\"\"\"\n",
     "Docstring placeholder\n",
     "\"\"\"\n",
     "\n",
-    "def tsp_nearest_neighbor():\n",
+    "def tsp_nearest_neighbor(n):\n",
+    "    graph = random_graph(n)\n",
+    "    solution_path = []\n",
+    "    # Select a random city from graph - make that start city / first current city\n",
+    "    start_city = random.choice(range(len(graph)))\n",
+    "    print(f\"Len graph is {len(graph)}\")\n",
+    "    print(f\"start city is {start_city}\")\n",
+    "    curr_city = start_city\n",
+    "    all_cities_visited = False\n",
     "    solution_path.append(start_city)\n",
-    "    while all_cities_visited == False:\n",
+    "    print(f\"Solution path is {solution_path}\")\n",
+    "    while not all_cities_visited:\n",
     "        # Find nearest unvisited city and make that current city - add to solution path \n",
-    "        nearest = find_nearest_city(curr_city)\n",
+    "        nearest = find_nearest_city(curr_city, graph, solution_path)\n",
     "        solution_path.append(nearest)\n",
+    "        print(f\"Solution path is {solution_path}\")\n",
     "        curr_city = nearest\n",
     "        # Are there still unvisited cities? if yes, find nearest city\n",
-    "        not_all_visited = False \n",
-    "        for city in graph:\n",
-    "            if city not in solution_path: \n",
-    "                not_all_visited = True\n",
-    "        if not_all_visited == False:\n",
+    "        tripped = False\n",
+    "        for i in range(0,len(graph)):\n",
+    "            if i not in solution_path:\n",
+    "                tripped = True\n",
+    "        if not tripped:\n",
     "            all_cities_visited = True\n",
     "    # Return to the start city once you have visited every city  \n",
-    "    solution_path = solution_path.append(start_city)\n",
+    "    solution_path.append(start_city)\n",
     "    # Return path\n",
+    "    print(f\"The solution path is {solution_path}\")\n",
     "    return solution_path\n",
     "\n",
     "\"\"\"\n",
     "Docstring placeholder\n",
     "\"\"\"\n",
     "\n",
-    "def find_nearest_city(curr_city_index): \n",
+    "def find_nearest_city(curr_city_index, graph, solution_path) -> int:\n",
     "    min_weight = 1000000\n",
     "    for i in range(0,len(graph)):\n",
-    "        if graph[curr_city_index][i][\"weight\"] > 0: \n",
+    "        if i != curr_city_index and i not in solution_path:\n",
+    "            print(f\"Testing city {i} against {curr_city_index} with weight:\")\n",
+    "            print(graph[curr_city_index][i][\"weight\"])\n",
     "            if graph[curr_city_index][i][\"weight\"] < min_weight:\n",
-    "                graph[curr_city_index][i][\"weight\"] = min_weight\n",
-    "                nearest_city_index = graph[i]\n",
+    "                min_weight = graph[curr_city_index][i][\"weight\"]\n",
+    "                print(f\"Min weight is: {min_weight}\")\n",
+    "                nearest_city_index = i\n",
+    "    print(f\"Nearest city is {nearest_city_index}\")\n",
     "    return nearest_city_index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len graph is 3\n",
+      "start city is 2\n",
+      "Solution path is [2]\n",
+      "Testing city 0 against 2 with weight:\n",
+      "0.6322476879598905\n",
+      "Min weight is: 0.6322476879598905\n",
+      "Testing city 1 against 2 with weight:\n",
+      "0.6901338594153839\n",
+      "Nearest city is 0\n",
+      "Solution path is [2, 0]\n",
+      "Testing city 1 against 0 with weight:\n",
+      "0.11001488672503974\n",
+      "Min weight is: 0.11001488672503974\n",
+      "Nearest city is 1\n",
+      "Solution path is [2, 0, 1]\n",
+      "The solution path is [2, 0, 1, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "[2, 0, 1, 2]"
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tsp_nearest_neighbor(3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
   }
  ],
  "metadata": {
