Faster nearest neighbor

--- a/nearest_neighbor_heuristic.ipynb
+++ b/nearest_neighbor_heuristic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "6844ae64",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "78e7feb4",
    "metadata": {},
    "outputs": [],
@@ -39,88 +39,67 @@
     "def tsp_nearest_neighbor(n):\n",
     "    graph = random_graph(n)\n",
     "    solution_path = []\n",
-    "    # Select a random city from graph - make that start city / first current city\n",
-    "    start_city = random.choice(range(len(graph)))\n",
+    "    seen = set()\n",
+    "    length = 0\n",
+    "    start_city = 0\n",
     "    print(f\"Len graph is {len(graph)}\")\n",
     "    print(f\"start city is {start_city}\")\n",
     "    curr_city = start_city\n",
     "    all_cities_visited = False\n",
     "    solution_path.append(start_city)\n",
+    "    seen.add(start_city)\n",
     "    print(f\"Solution path is {solution_path}\")\n",
-    "    while not all_cities_visited:\n",
+    "    while len(seen) < len(graph):\n",
     "        # Find nearest unvisited city and make that current city - add to solution path \n",
-    "        nearest = find_nearest_city(curr_city, graph, solution_path)\n",
+    "        nearest = find_nearest_city(curr_city, graph, seen)\n",
     "        solution_path.append(nearest)\n",
+    "        seen.add(nearest)\n",
     "        print(f\"Solution path is {solution_path}\")\n",
+    "        length += graph[curr_city][nearest]['weight']\n",
     "        curr_city = nearest\n",
-    "        # Are there still unvisited cities? if yes, find nearest city\n",
-    "        tripped = False\n",
-    "        for i in range(0,len(graph)):\n",
-    "            if i not in solution_path:\n",
-    "                tripped = True\n",
-    "        if not tripped:\n",
-    "            all_cities_visited = True\n",
     "    # Return to the start city once you have visited every city  \n",
     "    solution_path.append(start_city)\n",
+    "    length += graph[curr_city][start_city]['weight']\n",
     "    # Return path\n",
     "    print(f\"The solution path is {solution_path}\")\n",
-    "    return solution_path\n",
+    "    return length, solution_path\n",
     "\n",
     "\"\"\"\n",
     "Docstring placeholder\n",
     "\"\"\"\n",
     "\n",
     "def find_nearest_city(curr_city_index, graph, solution_path) -> int:\n",
-    "    min_weight = 1000000\n",
-    "    for i in range(0,len(graph)):\n",
-    "        if i != curr_city_index and i not in solution_path:\n",
-    "            print(f\"Testing city {i} against {curr_city_index} with weight:\")\n",
-    "            print(graph[curr_city_index][i][\"weight\"])\n",
-    "            if graph[curr_city_index][i][\"weight\"] < min_weight:\n",
-    "                min_weight = graph[curr_city_index][i][\"weight\"]\n",
-    "                print(f\"Min weight is: {min_weight}\")\n",
-    "                nearest_city_index = i\n",
-    "    print(f\"Nearest city is {nearest_city_index}\")\n",
-    "    return nearest_city_index"
+    "    return min((i for i in range(len(graph)) if i not in solution_path), key=lambda i: graph[curr_city_index][i]['weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len graph is 3\n",
-      "start city is 2\n",
-      "Solution path is [2]\n",
-      "Testing city 0 against 2 with weight:\n",
-      "0.6322476879598905\n",
-      "Min weight is: 0.6322476879598905\n",
-      "Testing city 1 against 2 with weight:\n",
-      "0.6901338594153839\n",
-      "Nearest city is 0\n",
-      "Solution path is [2, 0]\n",
-      "Testing city 1 against 0 with weight:\n",
-      "0.11001488672503974\n",
-      "Min weight is: 0.11001488672503974\n",
-      "Nearest city is 1\n",
-      "Solution path is [2, 0, 1]\n",
-      "The solution path is [2, 0, 1, 2]\n"
+      "Len graph is 10\n",
+      "start city is 0\n",
+      "Solution path is [0]\n",
+      "Solution path is [0, 2]\n",
+      "Solution path is [0, 2, 6]\n",
+      "Solution path is [0, 2, 6, 9]\n",
+      "Solution path is [0, 2, 6, 9, 4]\n",
+      "Solution path is [0, 2, 6, 9, 4, 5]\n",
+      "Solution path is [0, 2, 6, 9, 4, 5, 7]\n",
+      "Solution path is [0, 2, 6, 9, 4, 5, 7, 3]\n",
+      "Solution path is [0, 2, 6, 9, 4, 5, 7, 3, 1]\n",
+      "Solution path is [0, 2, 6, 9, 4, 5, 7, 3, 1, 8]\n",
+      "The solution path is [0, 2, 6, 9, 4, 5, 7, 3, 1, 8, 0]\n",
+      "Shortest path is [0, 2, 6, 9, 4, 5, 7, 3, 1, 8, 0] with length 2.997\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "[2, 0, 1, 2]"
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tsp_nearest_neighbor(3)"
+    "length, path = tsp_nearest_neighbor(10)\n",
+    "print(f'Shortest path is {path} with length {length:.3f}')"
    ],
    "metadata": {
     "collapsed": false
