Clean up DP implementation
- Added functions into utils
- 10 nodes comparison with NN
- Added comments

TODO:
- Get shortest path and output
- Draw graph
- Full understand

--- a/dynamic-programming.ipynb
+++ b/dynamic-programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7094e70",
+   "id": "084a8014",
    "metadata": {},
    "source": [
     "# Dynamic Programming"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0225cb61",
+   "id": "466ea963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,39 +20,29 @@
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import random\n",
-    "from utils import random_graph\n",
+    "from utils import random_graph, create_adjacency_matrix\n",
     "import math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c8b536da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Function for creating adjacency matrix\n",
-    "\"\"\"\n",
-    "def create_adjacency_matrix(graph: nx.Graph):\n",
-    "    return nx.adjacency_matrix(graph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "35f1ebfe",
+   "id": "ad565a50",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# If AttributeError: module 'scipy.sparse' has no attribute 'coo_array'\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# pip install --upgrade scipy networkx\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Number of nodes in graph\u001b[39;00m\n\u001b[1;32m      5\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[0;32m----> 6\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[43mm\u001b[49m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Create a random graph alongside adjacency matrix\u001b[39;00m\n\u001b[1;32m      9\u001b[0m graph \u001b[38;5;241m=\u001b[39m random_graph(m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0, 0.2120870340493113, 0.6576682794610186, 0.9244080444119331, 0.12853301132248018, 0.4443550309435013, 0.6092958826559515, 0.7431317214443087, 0.4293598295670896, 0.4480115970140055], [0.2120870340493113, 0.0, 0.7065660886252252, 1.0864925318761218, 0.08671300752384518, 0.6562980294256855, 0.7013540548247943, 0.8585541374022173, 0.22946887665963753, 0.6516458235380864], [0.6576682794610186, 0.7065660886252252, 0.0, 0.6112312741663286, 0.6621695792020695, 0.7814069168624441, 0.14668402871375819, 0.2787598704387091, 0.7230889685906086, 0.8875616184380217], [0.9244080444119331, 1.0864925318761218, 0.6112312741663286, 0.0, 1.0081734529963984, 0.6997078273697546, 0.4879380474695943, 0.3332339687989218, 1.2067364948752664, 0.8311795318010602], [0.12853301132248018, 0.08671300752384518, 0.6621695792020695, 1.0081734529963984, 0.0, 0.5724308500979127, 0.6420177560553257, 0.7929187962750398, 0.3018285666591801, 0.5744960268953639], [0.4443550309435013, 0.6562980294256855, 0.7814069168624441, 0.6997078273697546, 0.5724308500979127, 0.0, 0.6583968502995367, 0.6952717236645045, 0.8693326201461582, 0.13273736086329999], [0.6092958826559515, 0.7013540548247943, 0.14668402871375819, 0.4879380474695943, 0.6420177560553257, 0.6583968502995367, 0.0, 0.1728168310974652, 0.7633834160133667, 0.7727415774867503], [0.7431317214443087, 0.8585541374022173, 0.2787598704387091, 0.3332339687989218, 0.7929187962750398, 0.6952717236645045, 0.1728168310974652, 0.0, 0.9340720547981859, 0.8219119435495402], [0.4293598295670896, 0.22946887665963753, 0.7230889685906086, 1.2067364948752664, 0.3018285666591801, 0.8693326201461582, 0.7633834160133667, 0.9340720547981859, 0.0, 0.8763174200942183], [0.4480115970140055, 0.6516458235380864, 0.8875616184380217, 0.8311795318010602, 0.5744960268953639, 0.13273736086329999, 0.7727415774867503, 0.8219119435495402, 0.8763174200942183, 0.0]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielpark/Documents/directed-salesman/utils.py:123: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "  return nx.adjacency_matrix(graph)\n"
      ]
     }
    ],
@@ -61,11 +51,11 @@
     "# pip install --upgrade scipy networkx\n",
     "\n",
     "# Number of nodes in graph\n",
-    "n = 4\n",
-    "n = m - 1\n",
+    "n = 10\n",
     "\n",
     "# Create a random graph alongside adjacency matrix\n",
-    "graph = random_graph(m)\n",
+    "graph = random_graph(n)\n",
+    "\n",
     "adj_graph = create_adjacency_matrix(graph)\n",
     "dist = adj_graph.todense().tolist()\n",
     "print(dist)"
@@ -73,75 +63,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d7e6d33",
+   "execution_count": 3,
+   "id": "c50e158f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initial Variables\n",
-    "\n",
-    "# memoization for top down recursion\n",
-    "memo = [[-1]*(1 << (n+1)) for _ in range(n+1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03ea657d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Dynamic Programming Solution\n",
-    "\n",
-    "Improves on Brute Force Solution\n",
-    "\"\"\"\n",
-    "def fun(i, mask):\n",
-    "    # base case\n",
-    "    # if only ith bit and 1st bit is set in our mask,\n",
-    "    # it implies we have visited all other nodes already\n",
-    "    if mask == ((1 << i) | 3):\n",
+    "def dp_runner(i, bitmask):\n",
+    "    \"\"\"\n",
+    "    Traverses the graph and finds the \n",
+    "    \n",
+    "    :graph: graph represented as a adjacency matrix\n",
+    "    :i: ith node\n",
+    "    :bitmask: represents the remaining nodes in the subset (TODO: bits are faster to operate)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Memoize for Top-Down Recursion\n",
+    "    memo = [[-1]*(1 << (n)) for _ in range(n)]\n",
+    "    \n",
+    "    # Base case:\n",
+    "    # - if only ith bit and 1st bit is set in our bitmask,\n",
+    "    # - it implies we have visited all other nodes already\n",
+    "    if bitmask == ((1 << i) | 3):\n",
     "        return dist[1][i]\n",
     "  \n",
-    "    # memoization\n",
-    "    if memo[i][mask] != -1:\n",
-    "        return memo[i][mask]\n",
+    "    # memoization to store visited distances\n",
+    "    if memo[i][bitmask] != -1:\n",
+    "        return memo[i][bitmask]\n",
     "  \n",
     "    res = 10**9  # result of this sub-problem\n",
     "  \n",
-    "    # we have to travel all nodes j in mask and end the path at ith node\n",
-    "    # so for every node j in mask, recursively calculate cost of \n",
-    "    # travelling all nodes in mask\n",
-    "    # except i and then travel back from node j to node i taking \n",
-    "    # the shortest path take the minimum of all possible j nodes\n",
-    "    for j in range(1, n+1):\n",
-    "        if (mask & (1 << j)) != 0 and j != i and j != 1:\n",
-    "            res = min(res, fun(j, mask & (~(1 << i))) + dist[j][i])\n",
-    "    memo[i][mask] = res  # storing the minimum value\n",
+    "    # Travel to all nodes j in mask and end the path at ith node\n",
+    "    for j in range(1, n):\n",
+    "        if (bitmask & (1 << j)) != 0 and j != i and j != 1:\n",
+    "            res = min(res, dp_runner(j, bitmask & (~(1 << i))) + dist[j][i])\n",
+    "\n",
+    "    memo[i][bitmask] = res  # storing the minimum value\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9dd5b43",
+   "execution_count": 4,
+   "id": "654b1e69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost of most efficient path = 3.0989468965126545\n"
+     ]
+    }
+   ],
    "source": [
-    "# Driver program to test above logic\n",
-    "ans = 10**9\n",
-    "for i in range(1, n+1):\n",
+    "# Driver program\n",
+    "cost = 10**9\n",
+    "for i in range(1, n):\n",
     "    # try to go from node 1 visiting all nodes in between to i\n",
     "    # then return from i taking the shortest route to 1\n",
-    "    ans = min(ans, fun(i, (1 << (n+1))-1) + dist[i][1])\n",
+    "    cost = min(cost, dp_runner(i, (1 << n)-1) + dist[i][1])\n",
     "\n",
-    "print(\"The cost of most efficient tour = \" + str(ans))"
+    "print(\"The cost of most efficient path = \" + str(cost))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eed063ad",
+   "metadata": {},
+   "source": [
+    "## Sources\n",
+    "\n",
+    "1. https://www.youtube.com/watch?v=Q4zHb-Swzro&t=118s&ab_channel=AbdulBari\n",
+    "2. http://www.lsi.upc.edu/~mjserna/docencia/algofib/P07/dynprog.pdf\n",
+    "3. https://medium.com/basecs/speeding-up-the-traveling-salesman-using-dynamic-programming-b76d7552e8dd\n",
+    "4. https://networkx.org/documentation/stable/reference/generated/networkx.linalg.graphmatrix.adjacency_matrix.html\n",
+    "5. https://people.eecs.berkeley.edu/~vazirani/algorithms/chap6.pdf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768b5521",
+   "id": "0a534600",
    "metadata": {},
    "outputs": [],
    "source": []
