Stash for rework dp solution

--- a/dynamic-programming.ipynb
+++ b/dynamic-programming.ipynb
@@ -15,13 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import random\n",
     "from utils import random_graph, create_adjacency_matrix\n",
-    "import math"
+    "import math\n",
+    "from dynamic_programming import dp"
    ]
   },
   {
@@ -42,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.0, 0.3531698265681541, 0.14390542012388777, 0.9047978336175405], [0.34837198596622765, 0.0, 0.2253130358289445, 0.812420078961868], [0.6502116780106836, 0.3541377133963572, 0.0, 0.8042750971433702], [0.10913557377848104, 0.2895161488503573, 0.6249208698520575, 0.0]]\n"
+      "[[0.0, 0.7088875231303147, 0.7609606242802379, 0.3988660061259635], [0.49160971546078325, 0.0, 0.5578424446883911, 0.7924893568839463], [0.32396717375488093, 0.2443661792982241, 0.0, 1.0661333757211584], [0.1606177030757865, 0.5130271320509985, 0.2881473206288081, 0.0]]\n"
      ]
     }
    ],
@@ -133,8 +131,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solution path is [0.0, 0.2253130358289445, 0.812420078961868]\n",
-      "The cost of most efficient path is 1.319104281822672\n"
+      "The solution path is [0.0, 0.5578424446883911, 0.7924893568839463]\n",
+      "The cost of most efficient path is 1.3250028568109786\n"
      ]
     },
     {
@@ -162,6 +160,16 @@
     "print(f\"The solution path is {solution_path}\")\n",
     "print(f\"The cost of most efficient path is {cost}\")\n",
     "nx.draw_circular(created_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e41adc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test dynamic_programming.py"
    ]
   },
   {
