Add time complexity comments

--- a/nearest_neighbor_heuristic.ipynb
+++ b/nearest_neighbor_heuristic.ipynb
@@ -46,38 +46,37 @@
     "\"\"\"\n",
     "\n",
     "def tsp_nearest_neighbor(graph):\n",
-    "    nx.draw(graph, nx.get_node_attributes(graph, 'pos'))\n",
-    "    solution_path = []\n",
-    "    seen = set()\n",
-    "    length = 0\n",
-    "    start_city = 0\n",
-    "    print(f\"Len graph is {len(graph)}\")\n",
-    "    print(f\"start city is {start_city}\")\n",
-    "    curr_city = start_city\n",
-    "    all_cities_visited = False\n",
-    "    solution_path.append(start_city)\n",
-    "    seen.add(start_city)\n",
-    "    print(f\"Solution path is {solution_path}\")\n",
-    "    while len(seen) < len(graph):\n",
+    "    nx.draw(graph, nx.get_node_attributes(graph, 'pos')) # unknown complexity\n",
+    "    solution_path = [] # O(1)\n",
+    "    seen = set() # O(1)\n",
+    "    length = 0 # O(1)\n",
+    "    start_city = 0 # O(1)\n",
+    "    print(f\"Len graph is {len(graph)}\") # O(1)\n",
+    "    print(f\"start city is {start_city}\") # O(1)\n",
+    "    curr_city = start_city # O(1)\n",
+    "    solution_path.append(start_city) # O(1)\n",
+    "    seen.add(start_city) # O(1)\n",
+    "    print(f\"Solution path is {solution_path}\") # O(1)\n",
+    "    while len(seen) < len(graph): # O(n)\n",
     "        # Find nearest unvisited city and make that current city - add to solution path \n",
-    "        nearest = find_nearest_city(curr_city, graph, seen)\n",
-    "        solution_path.append(nearest)\n",
-    "        seen.add(nearest)\n",
-    "        print(f\"Solution path is {solution_path}\")\n",
-    "        length += graph[curr_city][nearest]['weight']\n",
-    "        curr_city = nearest\n",
+    "        nearest = find_nearest_city(curr_city, graph, seen) # 0(n)\n",
+    "        solution_path.append(nearest) # O(1)\n",
+    "        seen.add(nearest) # O(1)\n",
+    "        print(f\"Solution path is {solution_path}\") # O(1)\n",
+    "        length += graph[curr_city][nearest]['weight'] # O(1)\n",
+    "        curr_city = nearest # O(1)\n",
     "    # Return to the start city once you have visited every city  \n",
-    "    solution_path.append(start_city)\n",
-    "    length += graph[curr_city][start_city]['weight']\n",
+    "    solution_path.append(start_city) # O(1)\n",
+    "    length += graph[curr_city][start_city]['weight'] # O(1)\n",
     "    # Return path\n",
-    "    print(f\"The solution path is {solution_path}\")\n",
-    "    return length, solution_path\n",
+    "    print(f\"The solution path is {solution_path}\") # O(1)\n",
+    "    return length, solution_path # O(1)\n",
     "\n",
     "\"\"\"\n",
     "Docstring placeholder\n",
     "\"\"\"\n",
     "\n",
-    "def find_nearest_city(curr_city_index, graph, solution_path) -> int:\n",
+    "def find_nearest_city(curr_city_index, graph, solution_path) -> int: # O(n) - stated above\n",
     "    return min((i for i in range(len(graph)) if i not in solution_path), key=lambda i: graph[curr_city_index][i]['weight'])"
    ]
   },
@@ -118,7 +117,7 @@
     "# Undirected, complete graph\n",
     "n = 10\n",
     "graph = random_graph(n)\n",
-    "length, path = tsp_nearest_neighbor(graph)\n",
+    "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f'Shortest path is {path} with length {length:.3f}')"
    ],
    "metadata": {
@@ -161,7 +160,7 @@
    "source": [
     "# Directed, complete\n",
     "graph = random_graph(n, True)\n",
-    "length, path = tsp_nearest_neighbor(graph)\n",
+    "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f'Shortest path is {path} with length {length:.3f}')"
    ],
    "metadata": {
@@ -257,7 +256,7 @@
     "from utils import circle_graph\n",
     "n = 10\n",
     "graph = circle_graph(n)\n",
-    "length, path = tsp_nearest_neighbor(graph)"
+    "length, path = tsp_nearest_neighbor(graph) # O(n^2)"
    ],
    "metadata": {
     "collapsed": false
@@ -300,7 +299,7 @@
    "source": [
     "from utils import rectangle_graph\n",
     "graph = rectangle_graph((2,5))\n",
-    "length, path = tsp_nearest_neighbor(graph)\n",
+    "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f\"length is {length}\")\n",
     "print(f\"path is {path}\")"
    ],
@@ -355,7 +354,7 @@
    "source": [
     "from utils import complete_barbell\n",
     "graph = complete_barbell(20)\n",
-    "length, path = tsp_nearest_neighbor(graph)\n",
+    "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f\"length is {length}\")\n",
     "print(f\"path is {path}\")"
    ],
