Held-Karp complexity

--- a/algorithm_complexity.ipynb
+++ b/algorithm_complexity.ipynb
@@ -5,8 +5,15 @@
    "source": [
     "# Analyzing Algorithmic Complexity\n",
     "\n",
-    "This notebook serves to find the complexity of each algorithm explored in the general case.\n",
-    "\n",
+    "This notebook serves to find the complexity of each algorithm explored in the general case."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Brute-Force\n",
     "\n",
     "The brute-force approach is the most basic approach to solving the TSP, but also one of the slowest. It tries each path and finds which one is the fastest.\n",
@@ -29,6 +36,49 @@
     "There are `len(path)` loops that run in constant time and $k+1$ loops that run in $k!$ time. This means, in total, the runtime of `brute_force` for $k+1\\ge2$ is `len(path)`$+(k+1)k!$. As we only care about the long-term behavior, `len(path)` is effectively zero, leaving the runtime to be $0+(k+1)k!$. This simplifies to $O((k+1)!)$. Therefore, we have shown that if $P(k)$ is true for some $k \\ge 1$, then $P(k+1)$ is also true. Since we have also shown $P(1)$, by the principle of mathematical induction, $P(n_p)$ is true for all $n_p \\ge 1$. That is, `_brute_force_rec` runs in $n_p!$ time where $n_p$ is the number of non-zero nodes in `graph` minus the number of nodes in `path`.\n",
     "\n",
     "We will now show that `brute_force` has this same time complexity, however this time in terms of $n$, the number of non-zero nodes in `graph`. `brute_force` only has two lines. We can see that the first line, which calls `_brute_force_rec` runs in $O(n!)$ time, as it passes in an empty set. That is $n_p=$`len(graph)`$-1-0=n$. The second statement returns the distance plus a constructed list. The constructed list involves a list reversal and an effective `extend` call, both of which run in linear time. The runtime of `brute_force` is therefore $O(n!+2n)$. Since we only care about the long-term behavior, we can ignore the $2n$ as it is negligible. Therefore, the true runtime of `brute_force` is $O(n!)$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Held-Karp\n",
+    "\n",
+    "The Held-Karp algorithm attempts to optimize the brute-force approach by first solving sub-problems which eliminate the need to check a high percentage of the larger problem. The basic intuition is that if you know that A->B->C-D is faster than A->C->B->D, there is no reason to check any path beginning with A->C->B->D, since it cannot be the shortest path. It does this by saving a cache mapping a tuple containing a set of nodes and a node in that set to the shortest path that goes through all of the nodes in the set, ending at the given node. For instance, `cache[({1, 2, 3}, 2)]` gives the shortest path from 0 to 2 that goes through 1, 2, and 3. It can build this mapping up from one element sets through to n-element sets.\n",
+    "\n",
+    "Our solution, as implemented in `held_karp.py`, runs in $O(n^22^n)$ time, as proved below.\n",
+    "\n",
+    "Let $n$ be the number of nodes in the graph in the input to `held_karp`. We will split the code into three segments, as is done in the code: the setup, part 1, and part 2. We will calculate the runtime of each part individually, and the overall runtime of the function will be whichever is the slowest.\n",
+    "\n",
+    "The setup runs in $O(n)$ time. Setting each of the variables are constant, and adding a value to the cache (in the loop) is also constant. Since the number of runs of the loop is equal to $n-1$, the setup portion runs in linear time.\n",
+    "\n",
+    "Part 1 runs in $O(n^22^n)$ time. Consider one loop of the outer for loop. Let $s$ be equal to `subset_size`. From there, there are $n-1 \\choose s$ different subsets of size $s$ to consider. For each of these, we must loop through it twice; once to determine the target node, `k`, and once to determine the node before the target, `m`. Since these are nested, this part runs in $O(s(s-1)f(s))$ where $f(s)$ is the runtime of the innermost loop. Note the $s-1$ is there as the loop is skipped if `m==k`. Every command in the innermost loop (checking equality, dictionary lookup, addition, setting `shortest`), runs in constant time. There, $f(s)$ is constant and the innermost two loops run in $O(s(s-1))$ time (we are keeping $s(s-1)$, as opposed to $s^2$, as it will help later). As these loops are done once for each set, one run of the outer loop runs in $O(s(s-1) {n-1 \\choose s})$ time. Because this is not constant with respect to $s$, the total runtime of this section is the sum of this expression over all values of $s$. That is, the runtime of part 2 is:\n",
+    "\n",
+    "$\\begin{equation}\n",
+    "\\sum_{s=2}^{n-1}s(s-1){n-1 \\choose s}\n",
+    "\\end{equation}$\n",
+    "\n",
+    "Simplifying,\n",
+    "\n",
+    "$\\begin{align}\n",
+    "\n",
+    "&\\sum_{s=2}^{n-1}s(s-1){n-1 \\choose s} \\\\\n",
+    "=& \\sum_{s=2}^{n-1}s(s-1)\\frac{(n-1)!}{s!(n-1-s)!} \\\\\n",
+    "=& \\sum_{s=2}^{n-1}\\frac{(n-1)!}{(s-2)!(n-1-s)!} \\\\\n",
+    "=& \\sum_{s=2}^{n-1}\\frac{(n-1)(n-2)(n-3)!}{(s-2)!(n-3-(s-2))!} \\\\\n",
+    "=& (n-1)(n-2)\\sum_{s=2}^{n-1}{n-3 \\choose s-2} \\\\\n",
+    "=& (n-1)(n-2)\\sum_{t=0}^{n-3}{n-3 \\choose t} \\\\\n",
+    "=& (n-1)(n-2)2^{n-3} \\\\\n",
+    "\n",
+    "\\end{align}$\n",
+    "\n",
+    "This means part 1 runs in approximately $O(n^22^n)$ time.\n",
+    "\n",
+    "Part 2 runs in linear time. The setup before the loop takes constant time, as it is simply setting variables. Each line within the loop (dictionary lookup, addition, testing equality, setting variables) also each take constant time. The loop runs a total of $n-1$ times, so the whole section runs in linear time.\n",
+    "\n",
+    "Since these three sections happen in succession, the total runtime is the sum of them. Since we only care about long-term behavior, this runtime can be approximated by the term that dominates it: $n^22^n$. Therefore, the Held-Karp algorithm has a time complexity of $O(n^22^n)$."
    ],
    "metadata": {
     "collapsed": false
