Nearest neighbor complexity

--- a/algorithm_complexity.ipynb
+++ b/algorithm_complexity.ipynb
@@ -83,6 +83,21 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Nearest Neighbor\n",
+    "\n",
+    "The nearest neighbor algorithm is a fast and simple algorithm to find an *approximation* of the shortest path. This approximation is generally very bad, however, nearest neighbor (also known as \"greedy\") is often used as part of a more complex approximation algorithm, and so we will analyze the raw form here.\n",
+    "\n",
+    "Our solution, as implemented in `nearest_neighbor.py`, runs in $O(n^2)$ time.\n",
+    "\n",
+    "Let $n$ be the number of nodes in the graph in the input to `tsp_nearest_neighbor`. The bulk of the processing happens within the one loop - everything else (setting variables, appending to lists and sets, addition) takes constant time. The loop runs a total of $n-1$ times, as the size of `seen` increases by one each loop, starting from a size of 1, and it goes until it has every node in it. Everything in the loop except finding the nearest city happens in constant time. Finding the nearest city happens in linear time - for each node, `find_nearest_city` checks if it's in the list of seen nodes and finds its distance from the current node (both constant time operations) and then finds the shortest. Therefore, each loop runs in linear time. Since the number of loops is on the order of $n$, the total runtime of all the loops is $O(n^2)$. Since the rest of the function runs in constant time, `tsp_nearest_neighbor` runs in $O(n^2)$ time."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
