Update nearest neighbor jupyter notebook

--- a/nearest_neighbor.ipynb
+++ b/nearest_neighbor.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Nearest Neighbor Heuristic\n",
     "\n",
-    "**Authors**: Ben Morris, Daniel Park, Jess Brown, Han Vakil"
+    "**Authors**: Ben Morris, Daniel Park, Jess Brown, Han Vakil\n",
+    "\n",
+    "This Python Notebook serves as a space to test graphs for the nearest neighbor algorithm, and also as a space to demonstrate time complexity calculations."
    ]
   },
   {
@@ -35,6 +37,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Algorithmic Implementation\n",
+    "The algorithm has comments beside each line that indicate the time complexity of each individual step. Time complexity is most influenced by the highest order complexities. Within nearest neighbor, the time complexity is O(n^2), as the linear time complexity of checking each node during the process of visiting every city is multiplied by the linear time it takes to compare the weights of the edges between that city and every other city."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "78e7feb4",
@@ -42,43 +54,82 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Docstring placeholder\n",
-    "\"\"\"\n",
+    "    Runs the nearest neighbor algorithm on a given graph\n",
+    "\n",
+    "    Finds the shortest path from 0 to last city by finding nearest node to\n",
+    "    the designated current city and adding that city to a set of visited\n",
+    "    cities to ensure that no two cities are visited.\n",
+    "\n",
+    "    :param graph: the Graph to find the path through, with nodes labeled 0, 1, ...\n",
+    "    :return: a tuple, first the length of the path, and solution path / set of\n",
+    "    ordered cities\n",
+    "    \"\"\"\n",
     "\n",
     "def tsp_nearest_neighbor(graph):\n",
-    "    nx.draw(graph, nx.get_node_attributes(graph, 'pos')) # unknown complexity\n",
-    "    solution_path = [] # O(1)\n",
-    "    seen = set() # O(1)\n",
-    "    length = 0 # O(1)\n",
-    "    start_city = 0 # O(1)\n",
-    "    print(f\"Len graph is {len(graph)}\") # O(1)\n",
-    "    print(f\"start city is {start_city}\") # O(1)\n",
-    "    curr_city = start_city # O(1)\n",
-    "    solution_path.append(start_city) # O(1)\n",
-    "    seen.add(start_city) # O(1)\n",
-    "    print(f\"Solution path is {solution_path}\") # O(1)\n",
-    "    while len(seen) < len(graph): # O(n)\n",
+    "    #nx.draw(graph, nx.get_node_attributes(graph, 'pos')) # unknown complexity\n",
+    "    solution_path = [] # O(1) - constant\n",
+    "    seen = set() # O(1) - constant\n",
+    "    length = 0 # O(1) - constant\n",
+    "    start_city = 0 # O(1) - constant\n",
+    "    print(f\"Len graph is {len(graph)}\") # O(1) - constant\n",
+    "    print(f\"start city is {start_city}\") # O(1) - constant\n",
+    "    curr_city = start_city # O(1) - constant\n",
+    "    solution_path.append(start_city) # O(1) - constant\n",
+    "    seen.add(start_city) # O(1) - constant\n",
+    "    print(f\"Solution path is {solution_path}\") # O(1) - constant\n",
+    "    while len(seen) < len(graph): # O(n) - linear\n",
     "        # Find nearest unvisited city and make that current city - add to solution path \n",
-    "        nearest = find_nearest_city(curr_city, graph, seen) # 0(n)\n",
-    "        solution_path.append(nearest) # O(1)\n",
-    "        seen.add(nearest) # O(1)\n",
-    "        print(f\"Solution path is {solution_path}\") # O(1)\n",
-    "        length += graph[curr_city][nearest]['weight'] # O(1)\n",
-    "        curr_city = nearest # O(1)\n",
+    "        nearest = find_nearest_city(curr_city, graph, seen) # 0(n) - linear\n",
+    "        solution_path.append(nearest) # O(1) - constant\n",
+    "        seen.add(nearest) # O(1) - constant\n",
+    "        print(f\"Solution path is {solution_path}\") # O(1) - constant\n",
+    "        length += graph[curr_city][nearest]['weight'] # O(1) - constant\n",
+    "        curr_city = nearest # O(1) - constant\n",
     "    # Return to the start city once you have visited every city  \n",
-    "    solution_path.append(start_city) # O(1)\n",
-    "    length += graph[curr_city][start_city]['weight'] # O(1)\n",
+    "    solution_path.append(start_city) # O(1) - constant\n",
+    "    length += graph[curr_city][start_city]['weight'] # O(1) - constant\n",
     "    # Return path\n",
-    "    print(f\"The solution path is {solution_path}\") # O(1)\n",
+    "    print(f\"The solution path is {solution_path}\") # O(1) - constant\n",
     "    return length, solution_path # O(1)\n",
     "\n",
     "\"\"\"\n",
-    "Docstring placeholder\n",
-    "\"\"\"\n",
+    "    Calculates the nearest neighbor to a given node\n",
     "\n",
-    "def find_nearest_city(curr_city_index, graph, solution_path) -> int: # O(n) - stated above\n",
+    "    Finds the minimum weight between a designated node and every other node /\n",
+    "    city in the graph. Does not check the weight between two cities if the\n",
+    "    second city is already in the set of visited cities.\n",
+    "\n",
+    "    :param curr_city_index: the index of the current city / node in the graph\n",
+    "    (graph is a dict with keys corresponding to city index)\n",
+    "    :param graph: the Graph to find the path through, with nodes labeled 0, 1, ...\n",
+    "    :param solution_path: set of all cities that have been visited / added\n",
+    "    to the path already\n",
+    "    :return: a tuple, first the length of the path, and solution path / set of\n",
+    "    ordered cities\n",
+    "    \"\"\"\n",
+    "\n",
+    "def find_nearest_city(curr_city_index, graph, solution_path) -> int: # O(n) - stated above in function call\n",
     "    return min((i for i in range(len(graph)) if i not in solution_path), key=lambda i: graph[curr_city_index][i]['weight'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Testing on different graph types:\n",
+    "The following cells contain code that tests how nearest neighbor performs on different types of graphs, ranging from directed to undirected, complete to incomplete."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Undirected, complete random graph"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -125,6 +176,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Directed, complete random graph"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [
@@ -162,6 +222,15 @@
     "graph = random_graph(n, True)\n",
     "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f'Shortest path is {path} with length {length:.3f}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Directed, incomplete random graph"
    ],
    "metadata": {
     "collapsed": false
@@ -221,6 +290,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Directed Circle Graph"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [
@@ -253,10 +331,20 @@
     }
    ],
    "source": [
+    "# Directed Circle Graph\n",
     "from utils import circle_graph\n",
     "n = 10\n",
     "graph = circle_graph(n)\n",
     "length, path = tsp_nearest_neighbor(graph) # O(n^2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Directed rectangle graph"
    ],
    "metadata": {
     "collapsed": false
@@ -297,11 +385,21 @@
     }
    ],
    "source": [
+    "# Directed Rectangle Graph\n",
     "from utils import rectangle_graph\n",
     "graph = rectangle_graph((2,5))\n",
     "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
     "print(f\"length is {length}\")\n",
     "print(f\"path is {path}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Undirected, complete barbell graph"
    ],
    "metadata": {
     "collapsed": false
@@ -352,6 +450,7 @@
     }
    ],
    "source": [
+    "# Undirected complete barbell\n",
     "from utils import complete_barbell\n",
     "graph = complete_barbell(20)\n",
     "length, path = tsp_nearest_neighbor(graph) # O(n^2)\n",
