--- a/nearest_neighbor.ipynb
+++ b/nearest_neighbor.ipynb
@@ -14,21 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6844ae64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jbrown\\AppData\\Local\\Programs\\Python\\Python39\\lib\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\jbrown\\AppData\\Local\\Programs\\Python\\Python39\\lib\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\jbrown\\AppData\\Local\\Programs\\Python\\Python39\\lib\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import random\n",
@@ -108,7 +97,7 @@
     "    ordered cities\n",
     "    \"\"\"\n",
     "\n",
-    "def find_nearest_city(curr_city_index, graph, solution_path) -> int: # O(n) - stated above in function call\n",
+    "def find_nearest_city(curr_city_index, graph, solution_path) -> int: # O(n) - stated above by function call\n",
     "    return min((i for i in range(len(graph)) if i not in solution_path), key=lambda i: graph[curr_city_index][i]['weight'])"
    ]
   },
